add welcome activity layout

--- a/Blanko/app/src/main/res/layout/activity_welcome.xml
+++ b/Blanko/app/src/main/res/layout/activity_welcome.xml
@@ -1,11 +1,91 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context="com.blankoinc.blanko.WelcomeActivity">
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="center"
-        />
-</FrameLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".75"
+        >
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".75"
+        >
+        <EditText
+            android:id="@+id/Email"
+            android:hint="@string/email"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            />
+
+        <EditText
+            android:id="@+id/Pass"
+            android:hint="@string/pass"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+       <LinearLayout
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:layout_weight="2">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="35dp"
+            >
+            <ImageButton
+                android:src="@drawable/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_marginRight="16dp"
+                 />
+
+        </LinearLayout>
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_height="match_parent"
+               android:layout_weight="1"
+               android:layout_marginRight="35dp"
+               >
+               <ImageButton
+                   android:src="@drawable/sign_up_button"
+                   android:layout_width="wrap_content"
+                   android:background="@android:color/transparent"
+                   android:layout_height="wrap_content"
+                   android:scaleType="centerInside"
+                   android:layout_marginLeft="16dp"
+                  />
+           </LinearLayout>
+       </LinearLayout>
+
+
+    </LinearLayout>
+</LinearLayout>
