--- a/Blanko/app/src/main/res/layout/activity_welcome.xml
+++ b/Blanko/app/src/main/res/layout/activity_welcome.xml
@@ -60,13 +60,14 @@
             android:layout_marginLeft="35dp"
             >
             <ImageButton
+                android:id="@+id/sign_in_button"
                 android:src="@drawable/sign_in_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
                 android:background="@android:color/transparent"
                 android:layout_marginRight="16dp"
-                 />
+                />
 
         </LinearLayout>
            <LinearLayout
@@ -76,6 +77,7 @@
                android:layout_marginRight="35dp"
                >
                <ImageButton
+                   android:id="@+id/sign_up_button"
                    android:src="@drawable/sign_up_button"
                    android:layout_width="wrap_content"
                    android:background="@android:color/transparent"
