--- a/Blanko/app/src/main/res/layout/activity_splash.xml
+++ b/Blanko/app/src/main/res/layout/activity_splash.xml
@@ -4,8 +4,10 @@ android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 tools:context="com.blankoinc.blanko.SplashActivity">
 <ImageView
+    android:id="@+id/splashImage"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:scaleType="center"
-    android:src="@drawable/splash_animation_list"/>
+    />
+
 </FrameLayout>
