--- a/Blanko/app/src/main/res/layout/activity_welcome.xml
+++ b/Blanko/app/src/main/res/layout/activity_welcome.xml
@@ -30,7 +30,7 @@
             android:layout_marginRight="35dp"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
-            />
+            android:text="[Email]" />
 
         <EditText
             android:id="@+id/Pass"
