--- a/Blanko/app/src/main/res/menu/menu_register.xml
+++ b/Blanko/app/src/main/res/menu/menu_register.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.blankoinc.blanko.LoginActivity">
+      tools:context="com.blankoinc.blanko.RegisterActivity">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
