--- a/Blanko/app/src/main/res/layout/activity_register.xml
+++ b/Blanko/app/src/main/res/layout/activity_register.xml
@@ -2,6 +2,6 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.blankoinc.blanko.LoginActivity">
+                tools:context="com.blankoinc.blanko.RegisterActivity">
 
 </RelativeLayout>
