--- a/Blanko/app/src/main/res/layout/activity_welcome.xml
+++ b/Blanko/app/src/main/res/layout/activity_welcome.xml
@@ -63,6 +63,7 @@
             >
             <ImageButton
                 android:id="@+id/sign_in_button"
+                android:onClick="signIn"
                 android:src="@drawable/sign_in_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -80,6 +81,7 @@
                >
                <ImageButton
                    android:id="@+id/sign_up_button"
+                   android:onClick="signUp"
                    android:src="@drawable/sign_up_button"
                    android:layout_width="wrap_content"
                    android:background="@android:color/transparent"
