--- a/Blanko/app/src/main/res/layout/activity_welcome.xml
+++ b/Blanko/app/src/main/res/layout/activity_welcome.xml
@@ -9,15 +9,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".75"
-        >
+        android:layout_weight=".75">
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".75"
-        >
+        android:layout_weight=".75">
         <EditText
             android:id="@+id/Email"
             android:hint="@string/email"
@@ -29,9 +27,7 @@
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:text="[Email]" />
-
+            android:layout_marginTop="16dp"/>
         <EditText
             android:id="@+id/Pass"
             android:inputType="textPassword"
@@ -59,8 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginLeft="35dp"
-            >
+            android:layout_marginLeft="35dp">
             <ImageButton
                 android:id="@+id/sign_in_button"
                 android:onClick="signIn"
@@ -69,16 +64,13 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
                 android:background="@android:color/transparent"
-                android:layout_marginRight="16dp"
-                />
-
+                android:layout_marginRight="16dp"/>
         </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
-               android:layout_marginRight="35dp"
-               >
+               android:layout_marginRight="35dp">
                <ImageButton
                    android:id="@+id/sign_up_button"
                    android:onClick="signUp"
@@ -87,11 +79,8 @@
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
-                   android:layout_marginLeft="16dp"
-                  />
+                   android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
-
-
     </LinearLayout>
 </LinearLayout>
