--- a/Blanko/app/src/main/res/layout/activity_main.xml
+++ b/Blanko/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,55 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".MainActivity">
+                tools:context=".MainActivity"
+                android:orientation="horizontal">
+    
+    <VideoView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/videoView"
+        android:layout_gravity="center" />
 
-</LinearLayout>
+    <FrameLayout
+        android:layout_width="225dp"
+        android:layout_height="225dp"
+        android:layout_gravity="right|center_vertical"
+        android:background="@android:color/transparent"
+        android:layout_marginRight="25dp"
+    >
+        <ImageButton
+            android:id="@+id/down_button"
+            android:src="@drawable/down_button"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="bottom|center_horizontal"/>
+        <ImageButton
+            android:id="@+id/up_button"
+            android:src="@drawable/up_button"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:layout_gravity="top|center_horizontal"/>
+        <ImageButton
+            android:id="@+id/left_button"
+            android:src="@drawable/left_button"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:layout_gravity="left|center_vertical"
+            android:contentDescription="Move Left" />
+        <ImageButton
+            android:id="@+id/right_button"
+            android:src="@drawable/right_button"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:layout_gravity="right|center_vertical"/>
+    </FrameLayout>
+</FrameLayout>
