--- a/Blanko/app/src/main/res/layout/activity_main.xml
+++ b/Blanko/app/src/main/res/layout/activity_main.xml
@@ -12,44 +12,85 @@
         android:layout_gravity="center" />
 
     <FrameLayout
-        android:layout_width="225dp"
-        android:layout_height="225dp"
-        android:layout_gravity="right|center_vertical"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="right|bottom"
         android:background="@android:color/transparent"
-        android:layout_marginRight="25dp"
-    >
+        android:layout_marginRight="20dp"
+        android:id="@+id/directional_buttons"
+        android:layout_marginBottom="20dp">
         <ImageButton
             android:id="@+id/down_button"
             android:src="@drawable/down_button"
             android:scaleType="centerInside"
             android:background="@android:color/transparent"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="bottom|center_horizontal"/>
         <ImageButton
             android:id="@+id/up_button"
             android:src="@drawable/up_button"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:scaleType="centerInside"
             android:background="@android:color/transparent"
             android:layout_gravity="top|center_horizontal"/>
+
+        <ImageButton
+            android:id="@+id/right_button"
+            android:src="@drawable/right_button"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"
+            android:layout_gravity="right|center_vertical"/>
+
         <ImageButton
             android:id="@+id/left_button"
             android:src="@drawable/left_button"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:scaleType="centerInside"
             android:background="@android:color/transparent"
             android:layout_gravity="left|center_vertical"
             android:contentDescription="Move Left" />
-        <ImageButton
-            android:id="@+id/right_button"
-            android:src="@drawable/right_button"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:scaleType="centerInside"
-            android:background="@android:color/transparent"
-            android:layout_gravity="right|center_vertical"/>
     </FrameLayout>
+
+
+
+
+    <SlidingDrawer
+        android:layout_width="match_parent"
+        android:layout_height="1in"
+        android:content="@+id/content"
+        android:handle="@+id/handle"
+        android:id="@+id/slidingDrawer"
+        android:layout_gravity="center_horizontal|bottom">
+
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/laser_button"
+                android:src="@drawable/laser_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="bottom|center_horizontal"/>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/handle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Slide UP" />
+
+    </SlidingDrawer>
+
+
+
+
 </FrameLayout>
