--- a/Blanko/app/src/main/res/layout/activity_main.xml
+++ b/Blanko/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,11 @@
                 android:layout_height="match_parent"
                 tools:context=".MainActivity"
                 android:orientation="horizontal">
-    
     <VideoView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/videoView"
         android:layout_gravity="center" />
-
     <FrameLayout
         android:layout_width="180dp"
         android:layout_height="180dp"
@@ -35,7 +33,6 @@
             android:scaleType="centerInside"
             android:background="@android:color/transparent"
             android:layout_gravity="top|center_horizontal"/>
-
         <ImageButton
             android:id="@+id/right_button"
             android:src="@drawable/right_button"
@@ -44,7 +41,6 @@
             android:scaleType="centerInside"
             android:background="@android:color/transparent"
             android:layout_gravity="right|center_vertical"/>
-
         <ImageButton
             android:id="@+id/left_button"
             android:src="@drawable/left_button"
@@ -55,39 +51,64 @@
             android:layout_gravity="left|center_vertical"
             android:contentDescription="Move Left" />
     </FrameLayout>
-
-
-
-
     <SlidingDrawer
         android:layout_width="match_parent"
         android:layout_height="1in"
         android:content="@+id/content"
         android:handle="@+id/handle"
         android:id="@+id/slidingDrawer"
+        android:background="@android:color/transparent"
         android:layout_gravity="center_horizontal|bottom">
-
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
             <ImageButton
                 android:id="@+id/laser_button"
                 android:src="@drawable/laser_button"
                 android:scaleType="centerInside"
                 android:background="@android:color/transparent"
                 android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="bottom|center_horizontal"/>
+                android:layout_height="70dp"/>
+            <ImageButton
+                android:id="@+id/docking_button"
+                android:src="@drawable/docking_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+            <ImageButton
+                android:id="@+id/power_button"
+                android:src="@drawable/power_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+            <ImageButton
+                android:id="@+id/light_button"
+                android:src="@drawable/light_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+            <ImageButton
+                android:id="@+id/video_button"
+                android:src="@drawable/video_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
         </LinearLayout>
-
-        <Button
+        <ImageButton
             android:id="@+id/handle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Slide UP" />
-
+            android:src="@drawable/up"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/black"/>
     </SlidingDrawer>
 
 
