--- a/Blanko/app/src/main/res/layout/activity_main.xml
+++ b/Blanko/app/src/main/res/layout/activity_main.xml
@@ -51,21 +51,28 @@
             android:layout_gravity="left|center_vertical"
             android:contentDescription="Move Left" />
     </FrameLayout>
+
     <SlidingDrawer
-        android:layout_width="match_parent"
-        android:layout_height="1in"
+        android:layout_width="450dp"
+        android:layout_height="150dp"
         android:content="@+id/content"
         android:handle="@+id/handle"
         android:id="@+id/slidingDrawer"
-        android:background="@android:color/transparent"
         android:layout_gravity="center_horizontal|bottom">
+        <ImageButton
+            android:id="@+id/handle"
+            android:src="@drawable/up_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent"/>
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@android:color/holo_blue_dark"
             android:orientation="horizontal"
-            android:gravity="center"
-            >
+            android:gravity="center">
             <ImageButton
                 android:id="@+id/laser_button"
                 android:src="@drawable/laser_button"
@@ -88,6 +95,13 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"/>
             <ImageButton
+                android:id="@+id/night_button"
+                android:src="@drawable/night_button"
+                android:scaleType="centerInside"
+                android:background="@android:color/transparent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+            <ImageButton
                 android:id="@+id/light_button"
                 android:src="@drawable/light_button"
                 android:scaleType="centerInside"
@@ -102,14 +116,8 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"/>
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/handle"
-            android:src="@drawable/up"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:scaleType="centerInside"
-            android:background="@android:color/black"/>
     </SlidingDrawer>
+
 
 
 
