--- a/Blanko/app/src/main/res/layout/activity_main.xml
+++ b/Blanko/app/src/main/res/layout/activity_main.xml
@@ -65,12 +65,13 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            />
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_blue_dark"
+            android:background="#ff82abb3"
             android:orientation="horizontal"
             android:gravity="center">
             <ImageButton
