--- a/Blanko/app/src/main/res/layout/custom_dialog_2.xml
+++ b/Blanko/app/src/main/res/layout/custom_dialog_2.xml
@@ -7,14 +7,19 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="30dp"/>
 
     <TextView
         android:id="@+id/text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFF"
-        android:layout_toRightOf="@+id/image"/>/>
+        android:layout_toRightOf="@+id/image"
+        android:layout_marginTop="15dp"/>
+
+    />
 <LinearLayout
     android:orientation="horizontal"
     android:id="@+id/dialogButtons"
